- fixed loading extensions
- fixed unit-tests for HTMLParser
- added `Total.syslog(msg)` method for internal app logging
- added auto audit logs to Actions in the form: `NEWACTION({ ... audit: 'Executed by {{ $.user.name }}' })`
- added `called {Number}` property per action in the `F.actions` collection
- fixed `CONF.$root` functionality

========================
0.0.12
========================

- fixed `$.status()` calling
- added support for schemas in the `QueryBuilder.autoquery(..., '@schema_name')` method
- extended `NEWACTION` cache with additional `input` key
- updated download procedure in the `COMPONENTANTOR()` method

========================
0.0.11
========================

- fixed `controller` and `user` argument in the `TRANSFORM()` method
- fixed assigning `user`, `query` and `params` properties in the `$.action()` method
- fixed nullable `value` argument in the `querybuilder.permit()`
- fixed parsing `CONF.version`
- added `QueryBuilder.pipe()` method as alias to `QueryBuilder.callback()`
- added `API.pipe()` method as alias to `API.callback()`
- added `Action.pipe()` method as alias to `Action.callback()`
- added `RESTBuilder.pipe()` method as alias to `RESTBuilder.callback()`
- added support for localization in the `TEMPLATE()` method

========================
0.0.10
========================

- improved HTMLParser parser
- extended `Flow.socket(flow, socket, [verify(client)], [check(client, msg)])` by adding `check` argument for verifying permissions
- fixed icons in FlowStream core for TMS

========================
0.0.9
========================

- added missing method `NEWMIDDLEWARE()`
- fixed parsing `user-agent`
- fixed `Message-ID` generator for email messages
- improved `Number.round()` by [Tomáš Novák](https://github.com/tomee03)
- added missing `$.hostname()` method in the `WebSocketController`
- added missing `$.address` property in the `WebSocketController`
- replaced `$.hostname` property with a method in the Schema/Auth Options