@@ -36,6 +36,7 @@
 - added auto audit logs to Actions in the form: `NEWACTION({ ... audit: 'Executed by {{ $.user.name }}' })`
 - added `called {Number}` property per action in the `F.actions` collection
 - fixed `CONF.$root` functionality
+- improved `F.backup()` by adding internal ignore list for `.DS_Store` and `.gitignore` files
 
 ========================
 0.0.12
